Add margin top to magnifier

--- a/common/common.scss
+++ b/common/common.scss
@@ -86,6 +86,7 @@ $coupa-neutral-medium: #999;
     order: 2;
     right: 0;
     font-size: 1.7511em;
+    margin-top: 0.17em;
     background: transparent;
     .discourse-no-touch & {
       &:hover {
